--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
     <div class="page">
         <div class="header">
-            <h1>Velkommen</h1>
+            <h2>Velkommen</h2>
         </div>
         <div class="menu">
-            <p>Meny:</p>
+            <h3>Meny:</h3>
             <a href="https://www.w3schools.com/colors/colors_picker.asp" target="_blank">Color picker</a><br>
             <a href="https://www.youtube.com/watch?v=1JZI8nOKdVU" target="_blank">Bra katt</a>
         </div>
