proper padding fix

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <button onclick="randomBodyColour()">Trykk her flere ganger om du tør!!!</button>
         </div>
         <div class="footer">
-            <p>Copyright: Jens Stoltenberg</p>
+            <p><b>Copyright:</b> Jens Stoltenberg</p>
         </div>
     </div>
 </body>
